test/async/neg/stark_naked_await.check
stark_naked_await.scala:7: error: `await` must be enclosed in an `async` block
    await(Future(4))
    ^
one error found
